# dnCourseWork

./: CMakeLists.txt  driver.cpp
Lib/: tinyexpr.c  tinyexpr.h
cmake/: FindSDL2.cmake  FindSDL2_TTF.cmake
game/: cell.hpp  game.hpp  game_field.hpp  graph.hpp  graph_builder.hpp  input_manager.hpp  line.hpp  windows_manager.hpp
game/UI/: ui_base.hpp  ui_button.hpp  ui_edit_game_field.hpp  ui_functions.hpp  ui_main_menu.hpp  ui_manager.hpp  ui_text_field.hpp
